  every time a contained conversation is unlocked (SWF-244).

Package org.springframework.webflow.engine
* FlowExecutionImpl.handleException() now also tries to handle FlowExecutionExceptions that
  occur during exception handling (SWF-261).
* The XmlFlowBuilder now also supports OGNL expressions in the "to" attribute of a transition
  when using the "on-exception" attribute (SWF-269).

Package org.springframework.webflow.execution
* Added FlowExecutionListener.sessionCreated(RequestContext, FlowSession) callback, useful for
  setting flow attributes before the flow starts (SWF-223).

Package org.springframework.webflow.executor
* Added resource URL encoding to redirects in a JSF environment (SWF-256).
* Added support for configuring a <flow:executor> in a JSF environment, greatly simplifying JSF SWF
  configuration and making it consistent with Spring MVC and Struts.  This also means its much easier
  to benefit from defaults such as a continuation-based flow execution repository and 'alwaysRedirectOnPause'.
  
Changes in version 1.0.1 (08.01.2007)
-------------------------------------

General
* In Ivy, JUnit is no longer a default dependency. There is now a new 'testing' configuration that
  includes JUnit as a dependency (SWF-213).

Package org.springframework.webflow.action
* FormAction methods getFormObject and getFormErrors are no longer final (SWF-222).
* When FormAction detects that the existing Errors instance is invalid, it will now copy over
  existing field and object errors to the newly created Errors instance (SWF-219).

Package org.springframework.webflow.config
* Added get/setMaxConversations and get/setMaxContinuations methods to FlowExecutorFactoryBean. Also
  added corresponding configuration abilities to the config schema (SWF-210).
* Fixed bug in FlowExecutorFactoryBean where the ClientContinuationFlowExecutionRepository was being
  configured with the SessionBindingConversationManager by default (SWF-216).